--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rey Vivas</title>
+    <title>Giovanni Gonzalez</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -12,11 +12,24 @@
   </head>
   <body>
     <main class="container">
-      <img src="img/perfil.webp" alt="Foto Cliente" class="profile-img" />
-      <h1>Rey Vivas</h1>
-      <p class="subtitle">Projects and Links</p>
+      <img 
+        src="img/perfil.webp"
+        onerror="this.onerror=null; this.src='https://cdn-icons-png.flaticon.com/512/149/149071.png';"
+        alt="Foto Cliente"
+        class="profile-img"
+      />
+      <h1>Giovanni Gonzalez</h1>
+      <p class="subtitle">Project Manager</p>
 
       <nav class="links" aria-label="Links de compañías">
+        <a
+          href="giovanni.vcf"
+          class="save-contact-btn"
+        >
+          <i class="fa fa-address-card"></i><h3>Save Contact</h3>
+        </a>
+
+
         <a
           href="https://atexgrp.com"
           class="card-link"
@@ -76,15 +89,10 @@
       </nav>
 
       <div class="social-icons" aria-label="Redes sociales">
-        <a href="https://www.linkedin.com/in/reynaldovivas/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/german-gonzalez-b672b480/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://www.instagram.com/atex.group/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
+
       </div>
       
     </main>
